# k-tech-feed-backend

./: README.md
.github/workflows/: api-ci.yml  crawler-ci.yml  gradle-build.yml
api/: .gitignore  Dockerfile  build.gradle  settings.gradle
api/src/main/java/com/gongmeda/ktechfeedbackend/: KTechFeedBackendApplication.java
api/src/main/java/com/gongmeda/ktechfeedbackend/common/: IpAddress.java  SelfValidating.java  UrlUtils.java
api/src/main/java/com/gongmeda/ktechfeedbackend/config/: AsyncConfig.java  QueryDslConfig.java  WebConfig.java
api/src/main/java/com/gongmeda/ktechfeedbackend/domain/: Article.java  Author.java
api/src/main/resources/: application.yml
api/src/test/java/com/gongmeda/ktechfeedbackend/: KTechFeedBackendApplicationTests.java
api/src/test/java/com/gongmeda/ktechfeedbackend/common/: SelfValidatingTest.java  UrlUtilsTest.java
api/src/test/java/com/gongmeda/ktechfeedbackend/domain/: ArticleTest.java  AuthorTest.java
crawler/: .prettierignore  Dockerfile  articles.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  util.py
crawler-python/: .gitignore  Dockerfile  articles.py  main.py  pyproject.toml
crawler/src/: app.js
crawler/src/configs/: logger.js
crawler/src/controllers/rss.controller/: parseRss.js
crawler/src/middlewares/: morganMiddlewares.js
crawler/src/routes/: index.router.js  rss.router.js
crawler/src/utils/: gptSummarize.js
deploy/: alb.tf  ec2.tf  ecr.tf  network.tf  provider.tf  rds.tf  route.tf  s3.tf  variables.tf  versions.tf
(+36 files in other folders)
